--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2552,6 +2552,76 @@ body {
 .cid-rBkfJVSZLl .signature {
   color: #efefef;
 }
+.cid-rCA4e4ywOT {
+  padding-top: 150px;
+  background-image: url("../../../assets/images/mbr-4-1920x1280.jpg");
+}
+.cid-rCA4e4ywOT .text-content {
+  padding-bottom: 105px;
+}
+.cid-rCA4e4ywOT .content-container .btn-bgr {
+  z-index: 0;
+}
+.cid-rCA4e4ywOT .box-item-text {
+  color: #232323;
+}
+.cid-rCA4e4ywOT .box-item {
+  padding: 2.5rem;
+}
+.cid-rCA4e4ywOT .box-item:first-child {
+  background-color: #ffffff;
+}
+.cid-rCA4e4ywOT .box-item:nth-child(2) {
+  background-color: #efefef;
+}
+.cid-rCA4e4ywOT .box-item:last-child {
+  background-color: #ffffff;
+}
+.cid-rCA4e4ywOT .box-list {
+  padding-left: 0;
+  list-style: none;
+  margin-bottom: 0;
+}
+.cid-rCA4e4ywOT .box-list li {
+  border-bottom: 1px solid;
+  padding: 10px 0 5px;
+}
+.cid-rCA4e4ywOT .box-list li:last-child {
+  border-bottom: none;
+}
+.cid-rCA4e4ywOT .box-list li span {
+  float: right;
+  text-align: right;
+  padding-left: 0.5rem;
+}
+.cid-rCA4e4ywOT .mbr-iconfont {
+  color: #66458e;
+  font-size: 48px;
+}
+@media (min-width: 992px) {
+  .cid-rCA4e4ywOT .media-container-row {
+    -webkit-justify-content: flex-start;
+    justify-content: flex-start;
+  }
+}
+@media (max-width: 767px) {
+  .cid-rCA4e4ywOT .mbr-section-subtitle,
+  .cid-rCA4e4ywOT .mbr-section-title,
+  .cid-rCA4e4ywOT .mbr-text,
+  .cid-rCA4e4ywOT .mbr-section-btn,
+  .cid-rCA4e4ywOT .icon-block-top,
+  .cid-rCA4e4ywOT .box-item-title,
+  .cid-rCA4e4ywOT .box-item-text {
+    text-align: center !important;
+  }
+}
+.cid-rCA4e4ywOT .mbr-section-title {
+  color: #232323;
+}
+.cid-rCA4e4ywOT .mbr-text,
+.cid-rCA4e4ywOT .mbr-section-btn {
+  color: #000000;
+}
 .cid-rBgFOKGnNL {
   padding-top: 75px;
   padding-bottom: 75px;
