create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2421,6 +2421,7 @@ section.lazy-placeholder:after {
 .cid-rCA4e4ywOT .mbr-text,
 .cid-rCA4e4ywOT .mbr-section-btn {
   color: #000000;
+  text-align: center;
 }
 .cid-rBgFOKGnNL {
   padding-top: 75px;
